<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Smart Budget</string>

    <string name="Cancel">Cancelar</string>
    <string name="Continue">Continuar</string>
    <string name="Back">Regresar</string>
    <string name="Accept">Aceptar</string>

    <!-- TODO: Login Module -->
    <string name="email_or_password_incorrect">Correo o contraseña incorrectos</string>
    <string name="haveAccount">¿Ya tienes una cuenta?, </string>
    <string name="Slogan">¡Gestiona tus finanzas sin estrés!</string>
    <string name="Signinbtn">Inicia Sesión</string>
    <string name="Signupbtn">Registrarse</string>
    <string name="Nickname">Nombre</string>
    <string name="User">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="ConfirmPassword">Confirmar contraseña</string>
    <string name="Remindme">Recuerdame</string>
    <string name="ForgotPassword">Olvidé mi contraseña</string>
    <string name="OrLoginWith">o puedes iniciar sesión con</string>
    <string name="noAccount">¿No tienes cuenta?,</string>
    <string name="Signin"> Inicia sesion</string>
    <string name="Signup"> ¡Regístrate aquí!</string>
    <string name="authGoogle"> Autenticarse con Google</string>
    <string name="authFacebook"> Autenticarse con Facebook </string>
    <string name="authLindkedIn"> Autenticarse con Linkedin </string>
    <string name="termsAndConditions"> Acepto los términos y condiciones </string>
    <string name="nickname_validate">Tu nickname debe contener entre 6 y 24 carácteres</string>
    <string name="email_validate">Debes ingresar un correo electrónico válido</string>
    <string name="password_validate">La contraseñas debe contener entre 6 y 16 carácteres</string>
    <string name="confirm_password_validate">Las contraseñas deben coincidir</string>

    <!-- TODO: Navigation -->
    <string name="Home">Inicio</string>
    <string name="History">Historial</string>
    <string name="Budget">Presupuestos</string>
    <string name="Settings">Configuración</string>

    <!-- TODO: Home Screen -->
    <string name="Homehello">¡Hola!, que gusto verte de nuevo</string>
    <string name="HomeMovements">¡No olvides registrar aquí tus movimientos!</string>
    <string name="HomeNewTransaction">Agregar movimiento</string>
    <string name="HomeNewTransactionCategory">Categoria</string>
    <string name="HomeNewTransactionAmount">Ingrese el monto</string>
    <string name="HomeNewTransactionAmountError">No has ingresado un monto</string>
    <string name="HomeNewTransactionDescription">Ingrese una descripcion</string>
    <string name="HomelastTransactions">Ultimos movimientos</string>
    <string name="HomeSuscription">Tus suscripciones</string>
    <string name="HomeSeeMore">Ver más…</string>

    <!--- TODO: Transaction dialogs -->
    <string name="SubscriptionHead">Suscripciones</string>
    <string name="AddSubscription">Agregar suscripción</string>
    <string name="SubscriptionTitleError">Debes ingresar un nombre</string>
    <string name="SubscriptionSetAmount">Ingresar Monto Mensual</string>
    <string name="SubscriptionAmountError">Debes ingresar un monto</string>
    <string name="SubscriptionSelectBillingDate">Fecha de cobro</string>
    <string name="SubscriptionPickBackground">Seleccionar color de fondo</string>
    <string name="SubscriptionTitle">Suscripcion</string>
    <string name="SubscriptionCategory">Categoria</string>

    <!-- TODO: History Screen -->
    <string name="NoHistory">Ups, parece que aún no hay nada que mostrar</string>
    <string name="HistorySortBy">Ordenar por</string>
    <string name="WithoutBudgets">Ups, parece que aún no has definido ningun presupuesto</string>
    <string name="NewBudget">Crear presupuesto</string>
    <string name="FABBudget">Crear presupuesto</string>

    <!-- TODO: Settings Screen -->
    <string name="SettingsTags">Etiquetas</string>
    <string name="SettingsCurrency">Seleccionar moneda por defecto</string>
    <string name="SettingEnableDarkMode">Modo Oscuro</string>
    <string name="SettingSecurity"> Seguridad</string>
    <string name="SettingAboutUs"> Acerca de Smart Budget</string>
    <string name="SettingEnablePIN">Habilitar clave de 4 dígitos</string>
    <string name="SettingsChangePassword">Cambiar Contraseña</string>
    <string name="SettingsHelp">Ayuda</string>
    <string name="SettingsInfo">Información</string>
    <string name="SettingsTermsOfUse">Terminos y condiciones del usuario</string>
    <string name="SettingsPrivacyPolicy">Políticas de privacidad</string>
    <string name="SettingsAccount">Cuenta</string>
    <string name="SettingsLogout">Cerrar Sesión</string>
    <string name="SettingsCurrencyUSD">Dólares</string>
    <string name="SettingsCurrencyCOP">Pesos Colombianos</string>

    <!-- TODO: Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>