<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBackground"
    tools:context="com.example.smartbudget.ui.views.fragments.login.SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="208dp"
            android:layout_height="72dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/logotipo_1"
            app:layout_constraintBottom_toTopOf="@+id/ll_inputLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_inputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/ll_buttonsLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo">

            <TextView
                android:id="@+id/tv_inputLoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:text="@string/Slogan"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/cv_username"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/shape_semirounded"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="18dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@id/cv_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_inputLoginText">

                <LinearLayout
                    android:id="@+id/ll_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_inputLoginText">

                    <ImageView
                        android:id="@+id/iv_loginUsername"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:background="@drawable/user_icon"
                        android:contentDescription="@string/User" />

                    <EditText
                        android:id="@+id/et_loginUsername"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:autofillHints="username"
                        android:hint="@string/User"
                        android:inputType="textEmailAddress" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="18dp"
                app:cardElevation="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_username"
                app:layout_constraintBottom_toTopOf="@id/cb_remindme">

                <LinearLayout
                    android:id="@+id/ll_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_username">

                    <ImageView
                        android:id="@+id/iv_loginPassword"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:background="@drawable/password_icon"
                        android:contentDescription="@string/Password" />

                    <EditText
                        android:id="@+id/et_loginPassword"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:autofillHints="password"
                        android:hint="@string/Password"
                        android:inputType="textPassword" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_errorLogin"
                style="@style/Base.Theme.SmartBudget.ParagraphS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/email_or_password_incorrect"
                android:textColor="@color/Red"
                android:visibility="gone"
                app:drawableSize="12dp"
                app:drawableStartCompat="@drawable/information"
                app:drawableTint="@color/Red" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="12dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_remindme"
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_remindme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remindme"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cb_remindme"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ForgotPassword"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cb_remindme" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_buttonsLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_inputLogin">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="30dp"
                android:text="@string/Signin"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:padding="6dp"
                android:text="@string/OrLoginWith"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_authSocialNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/ib_google"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/google_icon"
                            android:contentDescription="@string/authGoogle" />

                        <ImageButton
                            android:id="@+id/ib_facebook"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/facebook_icon2"
                            android:contentDescription="@string/authFacebook" />

                        <ImageButton
                            android:id="@+id/ib_linkedIn"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/linkedin_icon"
                            android:contentDescription="@string/authLindkedIn" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="match_parent"
                android:padding="6dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_noAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noAccount"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Signup"
                    android:textColor="@color/Green"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>