<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.fragments.Budget">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_withoutBudgets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/Base.Theme.SmartBudget.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:text="@string/WithoutBudgets" />

            <ImageView
                android:layout_width="380dp"
                android:layout_height="380dp"
                android:background="@drawable/notcontent1" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_budget"
            style="@style/Base.Theme.SmartBudget.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/lightGreen"
            android:text="@string/Budget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_lastTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_budget">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/floatingActionButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/FABBudget"
            android:scrollX="-7dp"
            android:scrollY="-7dp"
            android:src="@drawable/plus"
            app:backgroundTint="@color/lightGreen"
            app:fabSize="normal"
            app:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:maxImageSize="60dp"
            style="@style/FloatingActionButtonStyle">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>